--- a/index.html
+++ b/index.html
@@ -9,17 +9,45 @@
 <body>
     <div class="Header">
         <sub class="RightHead">
-            <img src="remove.png" class="logo"/>
+            <img src="remove.png" class="logo" />
         </sub>
         <sub class="LeftHead">
-            <a href="trend.html" id="Pricing">Trends</a>
-            <a href="product.html">Products</a>
+            <a href="trend.html">Trends</a>
+            <a href="product.html" id="underline-nav">Products</a>
             <a href="priceing.html">Pricing</a>
             <a href="api.html">API</a>
             <a href="contactus.html">Contact us</a>
-            <a href="signin.html"id="Pricing">Sign In</a>
+            <a href="signin.html">Sign In</a>
             <a href="signup.html" id="SignUp">Signup</a>
         </sub>
+
+        <div class="nav-tog" onclick="openSidebar()">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                fill="#5f6368">
+                <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
+            </svg>
+        </div>
     </div>
+
+    <div class="sidebar">
+        <div class="close" onclick="closeSidebar()">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                fill="#5f6368">
+                <path
+                    d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
+            </svg>
+        </div>
+        <a onclick="closeSidebar()" href="trend.html">Trends</a>
+        <a onclick="closeSidebar()" href="product.html">Products</a>
+        <a onclick="closeSidebar()" href="priceing.html">Pricing</a>
+        <a onclick="closeSidebar()" href="api.html">API</a>
+        <a onclick="closeSidebar()" href="contactus.html">Contact us</a>
+        <a onclick="closeSidebar()" href="signin.html">Sign In</a>
+        <a onclick="closeSidebar()" href="signup.html">Signup</a>
+    </div>
+
+        <script src="./app.js"></script>
+
+
 </body>
 </html>
